<resources>
    <string name="app_name">Pokedex</string>
    <string name="title_grass">Grass</string>
    <string name="title_my_pokedex">My Pokemons</string>
    <string name="title_pokemon_details">Pokemon Details</string>
    <string name="title_pokemon_search">Search Pokemon</string>
    <string name="enter_in_grass">Enter in grass</string>
    <string name="title_pokemon_flavor_text">Pokemon information text</string>
    <string name="title_pokemon_area">Pokemon area information</string>

    <string name="name_format">Name: %1$s</string>
    <string name="baby_format">Baby: %1$s</string>
    <string name="legendary_format">Legendary: %1$s</string>
    <string name="weight_format">Weight: %1$s kg</string>
    <string name="height_format">Height: %1$s m</string>
    <string name="moves">Moves:</string>
    <string name="stats">Stats:</string>
    <string name="abilities">Abilities:</string>
    <string name="stat_format">%1$s: %2$d</string>
    <string name="type">Type:</string>
    <string name="catch_">Catch!</string>
    <string name="run_">Run!</string>
    <string name="flee_">Flee!</string>
    <string name="send_">Send!</string>
    <string name="gotcha_">Gotcha!</string>
    <string name="release_">Release!</string>
    <string name="hunting_">Hunting!</string>
    <string name="found_in_the_high_grass">Found in the high Grass</string>
    <string name="found_on">Found on:</string>
    <string name="baby">Baby</string>
    <string name="mythical">Mythical</string>
    <string name="legendary">Legendary</string>
    <string name="natural_habitat">Natural Habitat:</string>
    <string name="id_format">ID: %1$d</string>
    <string name="id_name_format">ID: %1$d - %2$s</string>
    <string name="natural_habitat_format">Natural Habitat: %1$s</string>
    <string name="shape_format">Shape: %1$s</string>
    <string name="my_pokemons">My Pokemons!</string>
    <string name="double_tap_message">Double tap on image to catch or release this Pokemon</string>
    <string name="search_pokemon_by_name_or_id">Search Pokemon by Name or ID</string>
    <string name="search_pokemon_not_found">Not found Pokemon.\nTry another Name or ID</string>
    <string name="search_pokemon">Search Pokemon</string>
    <string name="hunting_pokemons_in_the_high_grass">Hunting Pokemons in the High Grass</string>
    <string name="tab_page_format">%1$d / %2$d</string>
    <string name="chance_format">Chance: %1$d</string>
    <string name="min_level_format">Min. Level: %1$d</string>
    <string name="max_level_format">Max. Level: %1$d</string>

    <string name="not_found_information">Unknown</string>
    <string name="not_found">Not found</string>
    <string name="message_not_found_pokemon_area">This Pokédex didn\'t find any information about where this pokémon lives</string>
</resources>