<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="pokemonDetail"
            type="com.example.pokedex.data.local.model.Pokemon" />

        <variable
            name="loadingStatus"
            type="Integer" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:context=".view.pokemon.PokemonDetailFragment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_name"
                    style="@style/PokedexTextTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@{pokemonDetail.nameShow}"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:textColorByText="@{pokemonDetail.pokemonSpecie.color}"
                    tools:text="Pokemon" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/bt_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginVertical="8dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_arrow_left"
                    app:colorByText="@{pokemonDetail.pokemonSpecie.color}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_image"
                    android:layout_width="0dp"
                    android:layout_height="240dp"
                    android:layout_margin="4dp"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name"
                    tools:src="@drawable/ic_pokeball" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/bt_help"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_help"
                    app:colorByText="@{pokemonDetail.pokemonSpecie.color}"
                    app:layout_constraintBottom_toBottomOf="@id/iv_image"
                    app:layout_constraintEnd_toEndOf="parent" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_image_favorite"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginVertical="8dp"
                    android:src="@drawable/ic_pokeball"
                    android:visibility="gone"
                    app:colorByText="@{pokemonDetail.pokemonSpecie.color}"
                    app:layout_constraintEnd_toEndOf="@id/iv_image"
                    app:layout_constraintTop_toTopOf="@+id/iv_image"
                    tools:visibility="visible" />

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/progress"
                    style="@style/Widget.Material3.CircularProgressIndicator.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:indeterminateBehavior="cycle"
                    android:visibility="@{loadingStatus}"
                    app:indicatorColor="@color/red_700"
                    app:layout_constraintBottom_toBottomOf="@id/iv_image"
                    app:layout_constraintEnd_toEndOf="@id/iv_image"
                    app:layout_constraintStart_toStartOf="@id/iv_image"
                    app:layout_constraintTop_toTopOf="@id/iv_image"
                    tools:progress="40" />

                <View
                    android:id="@+id/first_divider"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_marginHorizontal="40dp"
                    android:layout_marginVertical="4dp"
                    android:background="@drawable/divider"
                    app:colorByText="@{pokemonDetail.pokemonSpecie.color}"
                    app:layout_constraintTop_toBottomOf="@id/iv_image" />

                <androidx.core.widget.NestedScrollView
                    android:id="@+id/ns_container"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="4dp"
                    app:layout_constraintBottom_toBottomOf="@id/last_divider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/first_divider">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="4dp"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_habitat"
                            style="@style/PokedexTextDetail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="4dp"
                            android:text="@{@string/natural_habitat_format(pokemonDetail.pokemonSpecie.getHabitatShow())}"
                            tools:text="Natural Habitat:" />


                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_stat"
                            style="@style/PokedexTextDetail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="4dp"
                            android:text="@string/stats" />

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:id="@+id/ll_stats_group"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingHorizontal="8dp"
                            android:paddingVertical="4dp" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_encounter_area"
                            style="@style/PokedexTextDetail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="4dp"
                            android:text="@string/found_on" />

                        <com.google.android.material.chip.ChipGroup
                            android:id="@+id/cg_encounter_group"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="4dp"
                            android:padding="2dp"
                            android:visibility="gone"
                            app:chipSpacing="2dp"
                            app:itemSpacing="2dp"
                            app:selectionRequired="false"
                            tools:visibility="visible" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_type"
                            style="@style/PokedexTextDetail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="4dp"
                            android:text="@string/type" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_baby"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="8dp"
                            android:layout_marginVertical="4dp"
                            android:text="@string/baby"
                            android:textSize="16sp"
                            app:visibilityByBoolean="@{pokemonDetail.pokemonSpecie.isBaby()}" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_mythical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="8dp"
                            android:layout_marginVertical="4dp"
                            android:text="@string/mythical"
                            android:textSize="16sp"
                            app:visibilityByBoolean="@{pokemonDetail.pokemonSpecie.isMythical()}" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_legendary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="8dp"
                            android:layout_marginVertical="4dp"
                            android:text="@string/legendary"
                            android:textSize="16sp"
                            app:visibilityByBoolean="@{pokemonDetail.pokemonSpecie.isLegendary()}" />

                        <com.google.android.material.chip.ChipGroup
                            android:id="@+id/cg_type"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="4dp"
                            android:padding="2dp"
                            android:visibility="gone"
                            app:chipSpacing="2dp"
                            app:itemSpacing="2dp"
                            app:selectionRequired="false"
                            tools:visibility="visible" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_move"
                            style="@style/PokedexTextDetail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="4dp"
                            android:text="@string/moves" />

                        <GridLayout
                            android:id="@+id/gl_moves"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:columnCount="2" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.core.widget.NestedScrollView>

                <View
                    android:id="@+id/last_divider"
                    colorByText="@{pokemonDetail.pokemonSpecie.color}"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/grandient_linear_vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/container_buttons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="?colorPrimaryDark"
            app:cardElevation="6dp"
            app:colorByText="@{pokemonDetail.pokemonSpecie.color}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:shapeAppearanceOverlay="@style/CardView.RoundedTop">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bt_flee"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/white"
                    android:paddingHorizontal="16dp"
                    android:text="@string/run_"
                    app:cornerRadius="16dp"
                    app:icon="@drawable/ic_flee"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/bt_catch"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bt_catch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="24dp"
                    android:text="@{pokemonDetail.favoriteText}"
                    android:textStyle="bold"
                    app:cornerRadius="16dp"
                    tools:text="Catch!"
                    app:icon="@drawable/ic_pokeball"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/bt_flee" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
